--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y libpcap-dev
+          sudo apt-get install -y libpcap-dev protobuf-compiler
 
       - name: Set up Rust toolchain
         uses: actions-rs/toolchain@v1
