--- a/wallguard-common/Cargo.toml
+++ b/wallguard-common/Cargo.toml
@@ -11,5 +11,9 @@ serde.workspace = true
 serde_json.workspace = true
 nullnet-liberror.workspace = true
 
+bincode = "1.3.3"
+get_if_addrs = "0.5.3"
+pnet = "0.35.0"
+
 [build-dependencies]
 tonic-build = "0.13.1"
