--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -22,9 +22,6 @@ nullnet-traffic-monitor = "0.1.5"
 sysinfo = { version = "0.35.2", default-features = false, features = ["disk"] }
 async-channel = "2.3.1"
 nullnet-libresmon = "0.1.2"
-bincode = "1.3.3"
-get_if_addrs = "0.5.3"
-pnet = "0.35.0"
 wallguard-common = { path = "../wallguard-common" }
 prost.workspace = true
 tonic.workspace = true
@@ -32,3 +29,5 @@ tokio.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 nullnet-liberror.workspace = true
+xmltree = "0.11.0"
+md5 = "0.7.0"
