--- a/wallguard-server/Cargo.toml
+++ b/wallguard-server/Cargo.toml
@@ -29,7 +29,6 @@ actix-web = "4.11.0"
 actix-cors = "0.7.1"
 actix-ws = "0.3.0"
 
-async-ssh2-lite = { version = "0.5.0", features = ["async-io", "tokio"] }
 futures-util = "0.3.31"
 rustls = "0.23.27"
 tokio-rustls = "0.26.2"
@@ -48,6 +47,8 @@ tokio.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 nullnet-liberror.workspace = true
+
+russh = "0.54.3"
 
 [badges]
 maintenance = { status = "actively-developed" }
