--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -32,3 +32,7 @@ nullnet-liberror.workspace = true
 xmltree = "0.11.0"
 md5 = "0.7.0"
 nftables = "0.6.3"
+enigo = "0.6.1"
+scap = "0.0.8"
+image = "0.25.8"
+scrap = "0.5.0"
