--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -34,6 +34,6 @@ md5 = "0.7.0"
 nftables = "0.6.3"
 enigo = "0.6.1"
 scap = "0.0.8"
-image = "0.25.8"
 scrap = "0.5.0"
 copypasta = "0.10.2"
+openh264 = "0.9.0"
