--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,21 +4,40 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'wallguard-server/**'
+      - 'wallguard-common/**'
   pull_request:
     branches:
       - main
+    paths:
+      - 'wallguard-server/**'
+      - 'wallguard-common/**'
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: |
-          docker build -t wallguard-server:latest .
+      - name: Set up Docker Buildx
+        uses: docker/setup‑buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/wallguard-server:latest
