--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/wallguard-server:latest
+          tags: ghcr.io/${{ github.repository }}/wallguard-server:latest
