--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
+      - name: Compute lowercase owner
+        id: norm
+        run: |
+          echo "OWNER_LOWER=$(echo \"${{ github.repository_owner }}\" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -40,4 +45,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/wallguard-server:latest
+          tags: ghcr.io/${{ env.OWNER_LOWER }}/wallguard-server:latest
