--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,10 +1,8 @@
 name: Mirror to GitLab
 
 on:
-  workflow_call:
-    secrets:
-      GITLAB_TOKEN:
-        required: true
+  push:
+    branches: [ main ]
 
 jobs:
   mirror_to_gitlab:
