--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,21 +1,13 @@
-name: Mirror to GitLab
+name: Mirror
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'main'
 
 jobs:
-  mirror_to_gitlab:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Push to GitLab
-        run: |
-          git remote add gitlab https://oauth2:${{secrets.GITLAB_TOKEN}}@gitlab.nullnet.ai/nullnet/${{github.event.repository.name}}.git
-          git config --global user.name "${{github.actor}}"
-          git fetch gitlab main
-          git push gitlab main --force
+  mirror_to_gitlab:
+    uses: NullNet-ai/appguard-server/.github/workflows/gitlab_mirror.yml@main
+    secrets:
+      GITLAB_TOKEN: ${{secrets.GITLAB_TOKEN}}
