--- a/wallguard/Cargo.toml
+++ b/wallguard/Cargo.toml
@@ -35,7 +35,7 @@ enigo = "0.6.1"
 copypasta = "0.10.2"
 openh264 = "0.9.0"
 
-[target.'cfg(not(freebsd))'.dependencies]
+[target.'cfg(not(target_os = "freebsd"))'.dependencies]
 captis = "0.6.1"
 
 [target.'cfg(windows)'.dependencies]
