--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,38 +15,19 @@ on:
       - 'wallguard/**'
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-
-    runs-on: ${{ matrix.os }}
+  build-linux:
+    name: Build & Test (Linux)
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v6
 
-      - name: Install dependencies (Linux)
-        if: runner.os == 'ubuntu'
+      - name: Install dependencies
         run: |
           sudo apt-get update -y
           sudo apt-get install -y libpcap-dev protobuf-compiler libpipewire-0.3-dev \
             libpipewire-0.3-modules libspa-0.2-dev libxcb1-dev libxcb-shm0-dev \
             libxcb-randr0-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev
-
-      - name: Install dependencies (Windows)
-        if: matrix.os == 'windows'
-        run: |
-          choco install -y npcap
-
-          $url = "https://nmap.org/dist/npcap-sdk-1.15.zip"
-          $zip = "ncpk_sdk.zip"
-          Invoke-WebRequest -Uri $url -OutFile $zip
-          Expand-Archive -Path $zip -DestinationPath "$env:RUNNER_TEMP\npcap-sdk"
-          
-          $sdklib = Join-Path $env:RUNNER_TEMP "npcap-sdk\Lib\x64"
-          Write-Host "Setting LIB to include SDK lib path: $sdklib"
-          echo "##[set-env name=LIB]$($env:LIB + ';' + $sdklib)"  
-
 
       - name: Setup Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -54,13 +35,43 @@ jobs:
           toolchain: stable
           components: rustfmt, clippy
 
-      - name: fmt check
+      - name: Check formatting
         run: cargo fmt --all -- --check
 
       - name: Build workspace
         run: cargo build --verbose
 
-      - name: lint (clippy)
+      - name: Lint
+        run: cargo clippy -- -D warnings
+
+      - name: Test
+        run: cargo test -- --nocapture
+
+  build-windows:
+    name: Build & Test (Windows)
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install dependencies
+        run: |
+          choco install -y npcap
+          choco install -y protoc
+
+      - name: Setup Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: rustfmt, clippy
+
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
+      - name: Build workspace
+        run: cargo build --verbose
+
+      - name: Lint
         run: cargo clippy -- -D warnings
 
       - name: Test
