--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,6 +92,7 @@ jobs:
         - { name: FreeBSD, os: freebsd, os-version: '14.3', arch: x86_64,
             install-cmd: "sudo pkg update && \ 
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
+            . $HOME/.cargo/env \
             sudo pkg install -y cmake llvm libpcap protobuf"
           }
 
@@ -100,7 +101,59 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Run CI ${{ matrix.platform.name }}
+    - name: Install Dependencies
+      uses: cross-platform-actions/action@v0.30.0
+      with:
+        operating_system: ${{ matrix.platform.os }}
+        architecture: ${{ matrix.platform.arch }}
+        version: ${{ matrix.platform.os-version }}
+        cpu_count: 4
+        memory: 4G
+        environment_variables:
+        shutdown_vm: false
+        sync_files: runner-to-vm
+        run: ${{ matrix.platform.install-cmd }}
+
+    - name: Check Formatting
+      uses: cross-platform-actions/action@v0.30.0
+      with:
+        operating_system: ${{ matrix.platform.os }}
+        architecture: ${{ matrix.platform.arch }}
+        version: ${{ matrix.platform.os-version }}
+        cpu_count: 4
+        memory: 4G
+        environment_variables:
+        shutdown_vm: false
+        sync_files: false
+        run: cargo fmt --all -- --check
+
+    - name: Build
+      uses: cross-platform-actions/action@v0.30.0
+      with:
+        operating_system: ${{ matrix.platform.os }}
+        architecture: ${{ matrix.platform.arch }}
+        version: ${{ matrix.platform.os-version }}
+        cpu_count: 4
+        memory: 4G
+        environment_variables:
+        shutdown_vm: false
+        sync_files: false
+        run: cargo build --verbose
+
+    - name: Lint
+      uses: cross-platform-actions/action@v0.30.0
+      with:
+        operating_system: ${{ matrix.platform.os }}
+        architecture: ${{ matrix.platform.arch }}
+        version: ${{ matrix.platform.os-version }}
+        cpu_count: 4
+        memory: 4G
+        environment_variables:
+        shutdown_vm: false
+        sync_files: false
+        run: cargo clippy -- -D warnings
+
+    - name: Test
       uses: cross-platform-actions/action@v0.30.0
       with:
         operating_system: ${{ matrix.platform.os }}
@@ -110,5 +163,5 @@ jobs:
         memory: 4G
         environment_variables:
         shutdown_vm: true
-        sync_files: runner-to-vm
-        run: ${{ matrix.platform.install-cmd }} && cargo fmt --all -- --check && cargo build --verbose && cargo clippy -- -D warnings && cargo test -- --nocapture
+        sync_files: false
+        run: cargo test -- --nocapture
