--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
 
 
   build-bsd:
-    name: ${{ matrix.platform.name }} ${{ matrix.configuration }} ${{ matrix.platform.arch }}
+    name: ${{ matrix.platform.name }}
     runs-on: ubuntu-latest
     timeout-minutes: 35
     strategy:
@@ -125,7 +125,7 @@ jobs:
         environment_variables:
         shutdown_vm: false
         sync_files: false
-        run: cargo fmt --all -- --check
+        run: $HOME/.cargo/bin/cargo fmt --all -- --check
 
     - name: Build
       uses: cross-platform-actions/action@v0.30.0
@@ -138,7 +138,7 @@ jobs:
         environment_variables:
         shutdown_vm: false
         sync_files: false
-        run: cargo build --verbose
+        run: $HOME/.cargo/bin/cargo build --verbose
 
     - name: Lint
       uses: cross-platform-actions/action@v0.30.0
@@ -151,7 +151,7 @@ jobs:
         environment_variables:
         shutdown_vm: false
         sync_files: false
-        run: cargo clippy -- -D warnings
+        run: $HOME/.cargo/bin/cargo clippy -- -D warnings
 
     - name: Test
       uses: cross-platform-actions/action@v0.30.0
@@ -164,4 +164,4 @@ jobs:
         environment_variables:
         shutdown_vm: true
         sync_files: false
-        run: cargo test -- --nocapture
+        run: $HOME/.cargo/bin/cargo test -- --nocapture
